# mywallet

./: .editorconfig  .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
core/: admin.py  forms.py  models.py  services.py  urls.py  views.py
core/management/commands/: import_transactions.py  sync_tickets_prices.py
core/migrations/: 0001_initial.py  0002_alter_wallet_name.py  0002_ticker_company_name_ticker_document.py  0002_ticket_remove_stockasset_name_stockasset_ticket.py  0003_rename_value_ticket_price.py  0004_ticket_type.py  0005_wallet_stockasset_wallet.py
core/templatetags/: core_tags.py
flatpickr/: apps.py  forms.py  i18n.py
flatpickr/static/flatpickr/: init.js
mywallet/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
static/css/: dashboard.css
static/public/: exemplo-importacao.csv
templates/: __base.html  __main.html  _stock_asset_to_buy_table.html  base.html  core.html  home.html
templates/account/: login.html  logout.html  menu.html  password_change.html  password_reset.html  signup.html
templates/asset/: asset_list.html
templates/includes/: header.html  pagination.html  sidebar.html
templates/templatetags/: breadcrumb.html  breadcrumb_url.html
templates/transactions/: income_tax.html  transaction_confirm_delete.html  transaction_form.html  transaction_import.html  transaction_list.html
templates/transactions/snippets/: tax_info.html
templates/wallet/: asset_list.html  rebalancing.html  wallet_form.html  wallet_item_form.html  wallet_item_list.html  wallet_list.html
tests/: conftest.py  factories.py  test_views.py
