[tool.poetry]
name = "mywallet"
version = "0.1.0"
description = ""
authors = ["Cleiton Lima <cleiton.limapin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.3"
Django = "^4.0.2"
django-debug-toolbar = "^3.2.4"
django-extensions = "^3.1.5"
django-allauth = "^0.48.0"
django-htmx = "^1.8.0"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
whitenoise = "^6.0.0"
psycopg2-binary = "^2.9.3"
dj-database-url = "^0.5.0"
python-decouple = "^3.6"
python-dateutil = "^2.8.2"
pandas-datareader = "^0.10.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.1.0"
black = "^22.1.0"
flake8 = "^4.0.1"
ipython = "^8.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
DJANGO_SETTINGS_MODULE = "mywallet.settings_test"
python_files = [
    "tests.py",
    "test_*.py",
]

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
skip = "migrations"
